--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,4 +30,4 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     pathToPublish: $(Build.ArtifactStagingDirectory)
-    artifactName: MyBuildOutputs    
+    artifactName: _seojinAhn.sptekProduct
