Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,9 @@ steps:
     goals: 'package'
 
 - task: CopyFiles@2
-  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
+  displayName: 'Copy Files to:' $(Build.ArtifactStagingDirectory)
   inputs:
-    contents: '_buildOutput/**'
+    contents: '/home/vsts/work/1/s/MSA_Product/target/product-1.0.0-BUILD-SNAPSHOT.war'
     targetFolder: $(Build.ArtifactStagingDirectory)
 
 - task: PublishBuildArtifacts@1
