--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
     goals: 'package'
 
 - task: CopyFiles@2
-  displayName: 'Copy Files to:' $(Build.ArtifactStagingDirectory)
+  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
   inputs:
     contents: '/home/vsts/work/1/s/MSA_Product/target/product-1.0.0-BUILD-SNAPSHOT.war'
     targetFolder: $(Build.ArtifactStagingDirectory)
