--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,9 @@ steps:
   displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
   inputs:
     contents: '/home/vsts/work/1/s/MSA_Product/target/**.war'
-    targetFolder: $(Build.ArtifactStagingDirectory)
+    targetFolder: '/usr/local/tomcat/webapps/'
 
 - task: PublishBuildArtifacts@1
   inputs:
-    pathToPublish: $(Build.ArtifactStagingDirectory)
+    pathToPublish: '/usr/local/tomcat/webapps/'
     artifactName: drop
